# rag-boilerplate

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  404.html  CITATION.cff  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: tests.yml
LICENSE/: index.html
api/: index.html
docs/: api.md
search/: search_index.json
src/rag_boilerplate/: __init__.py  config.py  ingest.py
src/sql/: create_embeddings_table.sql
